--- a/src/style.css
+++ b/src/style.css
@@ -321,7 +321,7 @@ input {
 }
 
 .add-project-btn-div {
-  height: 30%;
+  height: 25%;
   width: 100%;
 }
 
@@ -344,7 +344,7 @@ input {
   font-size: 2rem;
   color: brown;
   font-family: "Poppins", sans-serif;
-  padding: 10px;
+  padding: 0px 10px;
   border-radius: 5px;
   cursor: pointer;
 }
